src/test/ui/typeck/typeck-default-trait-impl-negation-send.stderr
error[E0277]: `MyNotSendable` cannot be sent between threads safely
  --> $DIR/typeck-default-trait-impl-negation-send.rs:19:5
   |
LL | fn is_send<T: Send>() {}
   | --------------------- required by `is_send`
...
LL |     is_send::<MyNotSendable>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ `MyNotSendable` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `MyNotSendable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
